<resources>
    <string name="app_name">MovieMatch</string>
    <string name="_30">30</string>
    <string name="temps_par_duel_sec">Temps par duel (sec)</string>
    <string name="start">Démarrer !</string>
    <string name="details_du_film">Détails du film</string>
    <string name="name_label">Titre :</string>
    <string name="release_label">Sortie :</string>
    <string name="genre_label">Genre :</string>
    <string name="description_label">Synopsis :</string>
    <string name="description_text">Pendant la guerre du Viêt Nam, les services secrets de l\'armée américaine confient au capitaine Willard la mission de retrouver et d’exécuter le colonel Kurtz, dont les méthodes sont jugées « malsaines ». Celui-ci, établi au-delà de la frontière avec le Cambodge, a pris la tête d’un groupe de Mnong et mène des opérations contre l’ennemi avec une sauvagerie terrifiante.</string>
    <string name="options">Options :</string>
    <string name="films_dans_le_tournoi">Films dans le tournoi</string>
    <string name="select_film">Sélectionner ce film ?</string>
    <string name="No">Non</string>
    <string name="Yes">Oui</string>
    <string-array name="number_of_films_array">
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
    </string-array>
    <string name="film_selection_title">Choisis un film !</string>
    <string name="search_film_or_actor">Rechercher un film ou un acteur…</string>
    <string name="random_movie">Films aléatoires filtrés</string>
    <string name="random_search">Choix aléatoire</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="more_details">Plus de détails</string>
    <string name="releases_on">Sortira le %1$s</string>
    <string name="released_on">Sorti le %1$s</string>
    <string name="selected_movies">Films sélectionnés</string>
    <string name="movies_list">Liste des films</string>
    <string name="search">Rechercher</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Aventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comédie</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentaire</string>
    <string name="genre_drama">Drame</string>
    <string name="genre_family">Famille</string>
    <string name="genre_fantasy">Fantastique</string>
    <string name="genre_history">Histoire</string>
    <string name="genre_horror">Horreur</string>
    <string name="genre_music">Musique</string>
    <string name="genre_mystery">Mystère</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science-fiction</string>
    <string name="genre_tv_movie">Téléfilm</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">Guerre</string>
    <string name="genre_western">Western</string>
    <string name="watch_provider_apple_tv">Apple TV</string>
    <string name="watch_provider_disney_plus">Disney+</string>
    <string name="watch_provider_google_play_movies">Google Play Movies</string>
    <string name="watch_provider_netflix">Netflix</string>
    <string name="watch_provider_prime_video">Prime Video</string>
    <string name="countdown_timer_text">Temps restant : %1$ds</string>
    <string name="times_up">Temps écoulé !</string>
    <string name="reset_filters">Réinitialiser les filtres appliqués à la recherche aléatoire de films..</string>
    <string name="confirm">Confirmer</string>
    <string name="selection_confirmed">Sélection confirmée</string>
    <string name="movie_selection_confirmation_error_too_many">Vous avez sélectionné trop de films, %1$s demandés, vous avez en sélectionné %2$s. Retirez-en et veuillez réessayer.</string>
    <string name="movie_selection_confirmation_error_not_enough">Vous devez sélectionner %1$s movies, %2$s d\'actuellement sélectionnés. Sélectionnez-en plus et veuillez réessayer.</string>
    <string name="selection_confirmation">Êtes-vous sûr de vouloir confirmer votre sélection ?</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="reset">Réinitialiser</string>
    <string name="random_choice">Choix aléatoire</string>
    <string name="vote">Voter</string>
    <string name="popular">Populaires</string>
    <string name="upcoming">upcoming</string>
    <string name="default_game_name">Partie du</string>
    <string name="movie_match_logo">Movie Match Logo</string>
    <string name="game">Nom du jeu :</string>
    <string name="participants">Participants</string>
    <string name="winner">Winner</string>
    <string name="batman_the_dark_knight">Batman: The Dark Knight</string>
    <string name="_04_03">04/03</string>
    <string name="previous_matchs">Parties précédentes</string>
    <string name="aquaman_and_the_lost_kingdom">Aquaman and the Lost Kingdom</string>
    <string name="action">Action</string>
    <string name="guerre">Guerre</string>
    <string name="apocalypse_now_final_cut">Apocalypse Now Final Cut</string>
    <string name="_1979">1979</string>
    <string name="winner_is">Et le gagnant est ..</string>
    <string name="film_name">Nom du film</string>
    <string name="see_description">Voir la description du film</string>
    <string name="back_to_main_page">Retour à l’accueil</string>
    <string name="turn_number">Tour n°%1$d</string>
    <string name="confirm_quit_game">Voulez-vous vraiment quitter la partie ?</string>
    <string name="offline">hors-ligne</string>
    <string name="offline_message">Vous n\'avez plus accès à internet.\nVous ne pourrez aps rechercher de nouveaux films en ligne. Cependant, vous pouvez rechercher et choisir parmi les films que vous avez déjà consultés sur l\'application.</string>
</resources>