<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context="com.mafaly.moviematch.views.MovieMatchActivity">

        <ImageView
            android:id="@+id/logo_iv"
            android:layout_width="231dp"
            android:layout_height="166dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/movie_match_logo"
            android:src="@drawable/img" />

        <LinearLayout
            android:id="@+id/room_info_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_iv"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/game"
                android:fontFamily="@font/inter"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/game_name_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/default_game_name"
                android:inputType="text"
                android:padding="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/default_game_name"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/option_section_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/room_info_ll"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingTop="24dp"
            android:paddingRight="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/options"
                android:textSize="20sp"
                android:fontFamily="@font/inter"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/number_films_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:textSize="16sp"
                    android:text="@string/films_dans_le_tournoi" />

                <Spinner
                    android:id="@+id/number_films_s"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:entries="@array/number_of_films_array" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_per_duel_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:textSize="16sp"
                    android:text="@string/temps_par_duel_sec" />

                <EditText
                    android:id="@+id/time_per_duel_et"
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:hint="@string/_30"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/option_section_ll"
            android:layout_marginStart="32dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/mainBlue"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:text="@string/start" />
    </RelativeLayout>

    <Button
        android:id="@+id/history_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_button"
        android:text="@string/parties_precedentes"
        app:layout_anchor="@+id/relativeLayout"
        android:fontFamily="@font/galada"
        android:textSize="28sp"
        app:layout_anchorGravity="bottom|center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>