<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="com.mafaly.moviematch.views.MovieSelection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_search_section_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintHeight_percent="0.825"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/selection_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/film_selection_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/movie_search_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@color/input_bg"
            android:hint="@string/search_film_or_actor"
            android:inputType="text"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/selection_title_tv"
            app:layout_constraintBottom_toTopOf="@id/filters_section_cl" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filters_section_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_search_et">

            <TextView
                android:id="@+id/movie_selection_filter_tv"
                style="@style/SectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/random_movie"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/movie_selection_filter_tv">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/genre_cp_grp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/random_search_btn"
                    app:layout_constraintTop_toBottomOf="@+id/movie_selection_filter_tv"
                    app:singleLine="true" />
            </HorizontalScrollView>

            <HorizontalScrollView
                android:id="@+id/horizontalWatchProviderScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/watch_providers_cp_grp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/random_search_btn"
                    app:layout_constraintTop_toBottomOf="@+id/movie_selection_filter_tv"
                    app:singleLine="true" />
            </HorizontalScrollView>


            <Button
                android:id="@+id/search_with_filters_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                android:padding="10dp"
                android:text="@string/search"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/movie_selection_filter_tv"
                app:layout_constraintTop_toBottomOf="@+id/horizontalWatchProviderScrollView" />

            <ImageButton
                android:id="@+id/clear_filters_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/reset_filters"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@drawable/baseline_close_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_with_filters_btn"
                app:layout_constraintTop_toTopOf="@+id/search_with_filters_btn"
                app:tint="@color/grey" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/movies_search_results_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/filters_section_cl">

            <TextView
                style="@style/SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/movies_list"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_list_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="5"
                tools:listitem="@layout/movie_cell_layout" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/selected_movies_section_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="135dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_search_section_cl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/selected_movies"
                android:textColor="@color/black" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selected_movie_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/mini_movie_cell_layout" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirm_selection_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/confirm"
        android:src="@drawable/outline_check_24"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>